# litesearch

backend/: example.env  manage.py  pyproject.toml
backend/litesearch/: auth.py  commands.py  crud.py  database.py  main.py  models.py  query_parser.py  router.py  schemas.py  settings.py  utils.py
